WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279506
[GStreamer][WebRTC] Fix transceiver direction handling for GStreamer versions newer than 1.24
https://bugs.webkit.org/show_bug.cgi?id=279506
Summary
[GStreamer][WebRTC] Fix transceiver direction handling for GStreamer versions...
Philippe Normand
Reported
2024-09-11 04:23:30 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-09-11 04:25:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33459
EWS
Comment 2
2024-09-12 03:35:36 PDT
Committed
283548@main
(3688fe05d836): <
https://commits.webkit.org/283548@main
> Reviewed commits have been landed. Closing PR #33459 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-12 03:36:13 PDT
<
rdar://problem/135864482
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug