[GStreamer][WebRTC] Fix transceiver direction handling for GStreamer versions newer than 1.24 https://bugs.webkit.org/show_bug.cgi?id=279506

Reviewed by Xabier Rodriguez-Calvar.

GstWebRTCRTPTransceiver doesn't have a fired-direction property, so use direction. Until
GStreamer 1.26 direction and current-direction always had the same value. This was fixed by:
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/commit/cafb999fb0cdf32803fcc3f85f2652212f05c2d0

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::toGStreamerMediaEndpointTransceiverState):

Canonical link: https://commits.webkit.org/283548@main